removing java.xml.bind dependency